RDDを使ったAP起動でのエラー回避方法の追加