@@ -1,5 +1,11 @@
 ThisBuild / version := "0.1.0-SNAPSHOT"
 ThisBuild / scalaVersion := "2.13.18"
+// RDDを使った動作確認には、JDK 9以降のモジュールシステムの影響で以下のJVMオプションが必要
+Test / javaOptions ++= Seq(
+  "--add-opens=java.base/java.nio=ALL-UNNAMED",
+  "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
+  "--add-opens=java.base/java.util=ALL-UNNAMED"
+)
 
 lazy val sparkVersion ="4.0.1"
 lazy val scalatestVersion = "3.2.19"
